<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.DocOnCallFragment">
    <!-- Loading -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:id="@+id/pbLoading"
            style="@style/pb_loading"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Create Appointment -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clCreateAppointment"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <doc.on.call.CustomFonts.MyTextView_Roboto_Regular
            android:id="@+id/tvTitle"
            style="@style/tv_title"
            android:layout_marginTop="@dimen/margin_header_size_30dp"
            android:text="@string/app_slogan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etIssue"
            style="@style/et_input_big"
            android:layout_marginTop="@dimen/margin_size_30dp"
            android:padding="@dimen/padding_size_10dp"
            android:hint="@string/label_enter_issue"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <View
            style="@style/v_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etIssue" />

        <doc.on.call.CustomFonts.MyTextView_Roboto_Regular
            android:id="@+id/tvDate"
            style="@style/tv_label"
            android:layout_margin="@dimen/margin_size_30dp"
            android:text="@string/label_date_not_selected"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etIssue" />

        <doc.on.call.CustomFonts.Button_Roboto_Medium
            android:id="@+id/btnDate"
            style="@style/btn_info_sm"
            android:text="@string/label_select_date"
            android:layout_margin="@dimen/margin_size_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etIssue" />

        <View
            android:id="@+id/view"
            style="@style/v_line"
            android:layout_marginBottom="@dimen/margin_size_20dp"
            app:layout_constraintBottom_toTopOf="@+id/btnTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <doc.on.call.CustomFonts.MyTextView_Roboto_Regular
            android:id="@+id/tvTime"
            style="@style/tv_label"
            android:layout_marginLeft="@dimen/margin_size_30dp"
            android:layout_marginTop="@dimen/margin_size_85dp"
            android:text="@string/label_time_not_selected"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDate" />

        <doc.on.call.CustomFonts.Button_Roboto_Medium
            android:id="@+id/btnTime"
            style="@style/btn_info_sm"
            android:text="@string/label_select_time"
            android:layout_marginRight="@dimen/margin_size_20dp"
            android:layout_marginTop="@dimen/margin_size_60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnDate" />

        <View
            style="@style/v_line"
            android:layout_marginTop="@dimen/margin_size_30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnTime" />

        <doc.on.call.CustomFonts.Button_Roboto_Medium
            android:id="@+id/btnCreate"
            style="@style/btn_primary"
            android:layout_marginTop="@dimen/margin_size_70dp"
            android:text="@string/label_make_appointment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnTime" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Pending appointment -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clPendingAppointment"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tvText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ERROR"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>