<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="doc.on.call.ForgotPasswordActivity">

    <ProgressBar
        android:id="@+id/pbLoading"
        style="@style/pb_loading"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgIcon"
        style="@style/iv_logo"
        android:layout_marginTop="@dimen/margin_header_size_100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Step one Reset Password Inputs -->
    <LinearLayout
        android:id="@+id/llResetInputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/imgIcon">

        <doc.on.call.CustomFonts.MyTextView_Roboto_Regular
            style="@style/tv_title"
            android:layout_marginTop="@dimen/margin_spacing_size_15dp"
            android:text="@string/label_forgot_password" />

        <doc.on.call.CustomFonts.MyTextView_Roboto_Regular
            style="@style/tv_label_accent"
            android:layout_marginTop="@dimen/margin_spacing_size_15dp"
            android:gravity="center"
            android:text="@string/placeholder_body_reset_password" />

        <LinearLayout style="@style/et_layout">
            <doc.on.call.CustomFonts.EditText_Roboto_Regular
                android:id="@+id/etUsername"
                style="@style/et_input"
                android:layout_marginTop="@dimen/margin_spacing_size_15dp"
                android:layout_weight="1"
                android:hint="@string/label_username"
                android:inputType="text" />
        </LinearLayout>

        <View style="@style/v_line_accent" />

        <doc.on.call.CustomFonts.MyTextView_Roboto_Medium
            android:id="@+id/btnResetPassword"
            style="@style/btn_primary"
            android:layout_marginTop="@dimen/margin_size_50dp"
            android:text="@string/label_reset_password" />

        <doc.on.call.CustomFonts.MyTextView_Roboto_Medium
            android:id="@+id/btnBack"
            style="@style/btn_info"
            android:layout_marginTop="@dimen/margin_spacing_size_15dp"
            android:text="@string/label_back" />
    </LinearLayout>

    <!-- Step twice OTP inputs -->
    <LinearLayout
        android:id="@+id/llOtpInputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/imgIcon">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_caption_size_20dp"
            android:text="@string/app_otp" />

        <com.chaos.view.PinView
            android:id="@+id/pinView"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_spacing_size_15dp"
            android:cursorVisible="true"
            android:inputType="number"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_18dp"
            android:textStyle="bold"
            app:cursorColor="@color/blue"
            app:cursorWidth="2dp"
            app:itemCount="6"
            app:itemHeight="50dp"
            app:itemRadius="10dp"
            app:itemSpacing="5dp"
            app:itemWidth="48dp"
            app:lineColor="@color/colorAccent"
            app:lineWidth="2dp"
            app:viewType="rectangle" />

        <doc.on.call.CustomFonts.MyTextView_Roboto_Medium
            android:id="@+id/btnSubmit"
            style="@style/btn_primary"
            android:layout_marginTop="@dimen/margin_size_50dp"
            android:text="@string/label_submit" />

        <doc.on.call.CustomFonts.MyTextView_Roboto_Medium
            android:id="@+id/btnBack2"
            style="@style/btn_info"
            android:layout_marginTop="@dimen/margin_spacing_size_15dp"
            android:text="@string/label_back" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
